# VCU08-NSIL-Software

./: .cproject  .gitignore  .mxproject  ADVANCED_TESTS_GUIDE.md  ARCHITECTURE_DIAGRAM.md  BOOT_SEQUENCE.md  CMakeLists.txt  ECU08 NSIL.ioc  HARDWARE_IN_LOOP_TESTING.md  INTEGRATION_TESTS.md  README.md  STARTUP_TESTS_GUIDE.md  TESTING_README.md  run_tests.ps1  run_tests.sh
Core/Inc/: app_tasks.h  can.h  control.h  diag.h  telemetry.h  test_advanced.h  test_integration.h  test_startup_sequence.h
Core/Src/: app_tasks.c  diag.c  freertos.c  gpio.c  main.c  spi.c  test_advanced.c  test_integration.c  test_startup_sequence.c  usb_otg.c
Debug/: ECU08 NSIL.elf  ECU08 NSIL.list  ECU08 NSIL.map  objects.list
Debug/Core/Src/: adc.cyclo  adc.d  adc.su  app_state.cyclo  app_state.d  app_state.su  app_tasks.cyclo  app_tasks.d  app_tasks.su  can.cyclo  can.d  can.su  control.cyclo  control.d  control.su  diag.cyclo  diag.d  diag.su  fdcan.cyclo  fdcan.d  freertos.cyclo  freertos.d  freertos.su  gpio.d  main.cyclo  main.d  main.su  main_rx_callback_snippet.cyclo  main_rx_callback_snippet.d  main_rx_callback_snippet.su  spi.cyclo  stm32h7xx_it.d  subdir.mk  system_stm32h7xx.d  telemetry.cyclo  telemetry.d  telemetry.su  tim.d  usart.d  usb_otg.d
Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_exti.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pcd.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_sd.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart_ex.d  stm32h7xx_ll_delayblock.d
ECU08 NSIL/: .cproject  .mxproject  .project  CMakeLists.txt  ECU08 NSIL.ioc  ECU_LOGIC_REPORT.md  INTEGRATION_TESTS_EXPLAINED.md  PHASE1_TESTS_IMPLEMENTATION.md  QUICK_START.md  README.md  SIL_COMPLETE_ANALYSIS.md  TESTING_DOCUMENTATION_HUB.md  TESTING_STRUCTURE.md  TESTS_QUICK_START.md  TESTS_REORGANIZATION_SUMMARY.md  run_tests.ps1  run_tests.sh  run_unit_tests.py
ECU08 NSIL/Core/Inc/: app.h  app_state.h  can.h  control.h  estado_vehiculo.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  telemetry.h  test_integration.h  usart.h
ECU08 NSIL/Core/Src/: adc.c  app.c  app_state.c  can.c  control.c  diag.c  fdcan.c  freertos.c  main.c  main_rx_callback_snippet.c  sdmmc.c  stm32h7xx_it.c  telemetry.c  test_integration.c  tim.c  usart.c
ECU08 NSIL/Debug/: makefile  objects.list
ECU08 NSIL/Debug/Core/Src/: app.cyclo  app.d  app.su  can.cyclo  can.d  can.su  control.d  diag.cyclo  diag.d  diag.su  fdcan.su  freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.d  main.su  memorymap.d  sdmmc.cyclo  sdmmc.d  sdmmc.su  spi.d  spi.su  stm32h7xx_hal_msp.d  stm32h7xx_it.cyclo  stm32h7xx_it.su  subdir.mk  telemetry.cyclo  telemetry.d  telemetry.su  tim.cyclo  tim.su  usart.cyclo  usart.su  usb_otg.cyclo  usb_otg.su
ECU08 NSIL/Debug/Core/Startup/: startup_stm32h733zgtx.d  subdir.mk
ECU08 NSIL/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_adc.d  stm32h7xx_hal_adc_ex.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_fdcan.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_mmc.d  stm32h7xx_hal_mmc_ex.d  stm32h7xx_hal_pcd_ex.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_sd_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_ll_sdmmc.d  stm32h7xx_ll_usb.d  subdir.mk
ECU08 NSIL/tests/sil/: CMakeLists.txt  sil_boot_sequence.c  sil_boot_sequence.h  sil_can_simulator.c  sil_can_simulator.h  sil_hal_mocks.c  sil_hal_mocks.h  sil_main.c  sil_results.c  sil_results.h  sil_simulator.py
ECU08 NSIL/tests/sil/integration/: test_boot_sequence.c  test_full_cycle.c
ECU08 NSIL/tests/sil/mocks/: cmsis_os2.h  cmsis_os2_impl.c  diag_sil.c  hal_impl.c  main.h
ECU08 NSIL/tests/sil/results/: SIL_RESULTS.md
ECU08 NSIL/tests/unit/: CMakeLists.txt  mocks.c  mocks.h  test_app_state.c  test_can_parsing.c  test_control_logic.c  test_error_handling.c  test_telemetry.c  unity_config.h  unity_runner.c
test_host/: CMakeLists.txt  mocks.c  unity_runner.c
